legend-pure-rust/crates/parser/tests/snapshots/test_class__multiple_annotations.snap
---
source: crates/parser/tests/test_class.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Class(
                    ClassDef {
                        package: Some(
                            Package {
                                name: "model",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 127,
                                    end_line: 2,
                                    end_column: 131,
                                },
                            },
                        ),
                        name: "Person",
                        type_parameters: [],
                        multiplicity_parameters: [],
                        super_types: [],
                        properties: [
                            Property {
                                name: "name",
                                type_ref: Type(
                                    TypeReference {
                                        package: None,
                                        name: "String",
                                        type_arguments: [],
                                        multiplicity_arguments: [],
                                        type_variable_values: [],
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 4,
                                            start_column: 61,
                                            end_line: 4,
                                            end_column: 66,
                                        },
                                    },
                                ),
                                multiplicity: PureOne,
                                aggregation: None,
                                default_value: None,
                                stereotypes: [
                                    StereotypePtr {
                                        profile: PackageableElementPtr {
                                            package: None,
                                            name: "doc",
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 4,
                                                start_column: 7,
                                                end_line: 4,
                                                end_column: 9,
                                            },
                                        },
                                        value: "deprecated",
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 4,
                                            start_column: 7,
                                            end_line: 4,
                                            end_column: 9,
                                        },
                                    },
                                ],
                                tagged_values: [
                                    TaggedValue {
                                        tag: TagPtr {
                                            profile: PackageableElementPtr {
                                                package: None,
                                                name: "doc",
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 4,
                                                    start_column: 25,
                                                    end_line: 4,
                                                    end_column: 27,
                                                },
                                            },
                                            value: "description",
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 4,
                                                start_column: 25,
                                                end_line: 4,
                                                end_column: 27,
                                            },
                                        },
                                        value: "The name",
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 4,
                                            start_column: 25,
                                            end_line: 4,
                                            end_column: 27,
                                        },
                                    },
                                ],
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 4,
                                    start_column: 55,
                                    end_line: 4,
                                    end_column: 58,
                                },
                            },
                        ],
                        qualified_properties: [],
                        constraints: [],
                        stereotypes: [
                            StereotypePtr {
                                profile: PackageableElementPtr {
                                    package: None,
                                    name: "temporal",
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 2,
                                        start_column: 9,
                                        end_line: 2,
                                        end_column: 16,
                                    },
                                },
                                value: "businesstemporal",
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 9,
                                    end_line: 2,
                                    end_column: 16,
                                },
                            },
                            StereotypePtr {
                                profile: PackageableElementPtr {
                                    package: None,
                                    name: "temporal",
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 2,
                                        start_column: 36,
                                        end_line: 2,
                                        end_column: 43,
                                    },
                                },
                                value: "processingtemporal",
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 36,
                                    end_line: 2,
                                    end_column: 43,
                                },
                            },
                        ],
                        tagged_values: [
                            TaggedValue {
                                tag: TagPtr {
                                    profile: PackageableElementPtr {
                                        package: None,
                                        name: "doc",
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 67,
                                            end_line: 2,
                                            end_column: 69,
                                        },
                                    },
                                    value: "description",
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 2,
                                        start_column: 67,
                                        end_line: 2,
                                        end_column: 69,
                                    },
                                },
                                value: "A person",
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 67,
                                    end_line: 2,
                                    end_column: 69,
                                },
                            },
                            TaggedValue {
                                tag: TagPtr {
                                    profile: PackageableElementPtr {
                                        package: None,
                                        name: "doc",
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 97,
                                            end_line: 2,
                                            end_column: 99,
                                        },
                                    },
                                    value: "todo",
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 2,
                                        start_column: 97,
                                        end_line: 2,
                                        end_column: 99,
                                    },
                                },
                                value: "Add more fields",
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 97,
                                    end_line: 2,
                                    end_column: 99,
                                },
                            },
                        ],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 2,
                            end_column: 5,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
