legend-pure-rust/crates/parser/tests/snapshots/test_class__quoted_package.snap
---
source: crates/parser/tests/test_class.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Class(
                    ClassDef {
                        package: Some(
                            Package {
                                name: "'p a c k a g e'",
                                parent: Some(
                                    Package {
                                        name: "test",
                                        parent: None,
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 7,
                                            end_line: 2,
                                            end_column: 10,
                                        },
                                    },
                                ),
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 13,
                                    end_line: 2,
                                    end_column: 27,
                                },
                            },
                        ),
                        name: SpannedString {
                            value: "A",
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 2,
                                start_column: 7,
                                end_line: 2,
                                end_column: 10,
                            },
                        },
                        type_variable_parameters: [],
                        type_parameters: [],
                        multiplicity_parameters: [],
                        super_types: [],
                        properties: [],
                        qualified_properties: [],
                        constraints: [],
                        stereotypes: [],
                        tagged_values: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 2,
                            end_column: 5,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
