legend-pure-rust/crates/parser/tests/snapshots/test_class__type_parameters.snap
---
source: crates/parser/tests/test_class.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Class(
                    ClassDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 7,
                                    end_line: 2,
                                    end_column: 8,
                                },
                            },
                        ),
                        name: SpannedString {
                            value: "Generic",
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 2,
                                start_column: 7,
                                end_line: 2,
                                end_column: 8,
                            },
                        },
                        type_variable_parameters: [],
                        type_parameters: [
                            "T",
                        ],
                        multiplicity_parameters: [],
                        super_types: [],
                        properties: [
                            Property {
                                name: "value",
                                type_ref: Type(
                                    TypeReference {
                                        package: None,
                                        name: "T",
                                        type_arguments: [],
                                        multiplicity_arguments: [],
                                        type_variable_values: [],
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 4,
                                            start_column: 12,
                                            end_line: 4,
                                            end_column: 12,
                                        },
                                    },
                                ),
                                multiplicity: PureOne,
                                aggregation: None,
                                default_value: None,
                                stereotypes: [],
                                tagged_values: [],
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 4,
                                    start_column: 5,
                                    end_line: 4,
                                    end_column: 9,
                                },
                            },
                        ],
                        qualified_properties: [],
                        constraints: [],
                        stereotypes: [],
                        tagged_values: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 2,
                            end_column: 5,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
